# RetailChain_DRF

./: .coveragerc  .env.sample  pyproject.toml  readme.md
config/: settings.py  urls.py
retail/: admin.py  models.py  serializers.py  urls.py  views.py
retail/migrations/: 0001_initial.py  0002_alter_chain_contacts_alter_chain_products.py  0003_alter_contact_email.py  0004_alter_contact_options.py  0005_remove_chain_created_date_alter_chain_creation_date.py  0006_chainlink_delete_chain.py  0007_alter_chainlink_contacts_alter_chainlink_products.py
tests/: test_chain.py  test_chain_link.py  test_contact.py  test_product.py  test_user.py
users/: serializers.py  views.py
users/migrations/: 0001_initial.py
